# stockevents-portfolio-dashboard

./: pyproject.toml  streamlit_app.py
trading_portfolio/: __init__.py  coach_outcome_formatter.py  coach_outcome_ui.py  positions_dashboard.py  stock_events_transactions_2026-06-23.csv  trading_validator.py
trading_portfolio/jeff_sun_trading_coach/: SKILL.md  __init__.py  coach.py  entry_framework.py  fills.py  horizon.py  infographic_manifest.py  market_context.py  models.py  process.py  recommendation.py  report.py  rules.py  stop_proxy.py  validator.py
trading_portfolio/tests/: test_coach.py  test_coach_outcome_formatter.py  test_entry_framework.py  test_fills.py  test_horizon.py  test_infographic_fidelity.py  test_market_context.py  test_process.py  test_recommendation.py  test_skill_guide.py  test_stock_events.py
