[project]
name = "stockevents-portfolio-dashboard"
version = "1.0.0"
description = "StockEvents portfolio dashboard with Jeff Sun trading coach."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit>=1.58.0",
    "pandas",
    "numpy",
    "yfinance",
    "plotly",
]

[tool.uv]
package = false