[project]
name = "stockevents-portfolio-dashboard"
version = "1.0.0"
description = "StockEvents portfolio dashboard with Jeff Sun trading coach."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.58.0",
    "pandas",
    "numpy",
    "yfinance",
    "plotly",
    "matplotlib",
]

[tool.uv]
package = false
